--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,6 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Login to GitHub Packages Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
         name: Heya
         run: echo 'Jonas likes you <3'
       -
@@ -18,5 +25,6 @@ jobs:
       -
         name: Build and Push
         run: | 
+          # ${{ secrets.GITHUB_TOKEN }}
           docker build -t chat .
           docker push chat
