--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,4 +27,4 @@ jobs:
         run: | 
           # ${{ secrets.GITHUB_TOKEN }}
           docker build -t docker.pkg.github.com/JKamsker/nodejs-test-server/chat .
-          docker push chat
+          docker push docker.pkg.github.com/JKamsker/nodejs-test-server/chat
