--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,25 +9,25 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      # -
-      #   name: Login to GitHub Packages Docker Registry
-      #   uses: docker/login-action@v1
-      #   with:
-      #     registry: docker.pkg.github.com
-      #     username: ${{ github.repository_owner }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
-      # -
-      #   name: Heya
-      #   run: echo 'Jonas likes you <3'
-      # -
-      #   name: Checkout
-      #   uses: actions/checkout@v2
-      # -
-      #   name: Build and Push
-      #   run: | 
-      #     # ${{ secrets.GITHUB_TOKEN }}
-      #     docker build -t docker.pkg.github.com/jkamsker/nodejs-test-server/chat .
-      #     docker push docker.pkg.github.com/jkamsker/nodejs-test-server/chat
+      -
+        name: Login to GitHub Packages Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
+        name: Heya
+        run: echo 'Jonas likes you <3'
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Build and Push
+        run: | 
+          # ${{ secrets.GITHUB_TOKEN }}
+          docker build -t docker.pkg.github.com/jkamsker/nodejs-test-server/chat .
+          docker push docker.pkg.github.com/jkamsker/nodejs-test-server/chat
       - 
         name: Deploying package to our awesome host
         uses: appleboy/ssh-action@master
@@ -36,4 +36,9 @@ jobs:
           port: 22
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          script: ls -la
+          script: |
+          echo "${{secrets.GITHUB_TOKEN}}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
+          docker pull docker.pkg.github.com/jkamsker/nodejs-test-server/chat
+          docker stop chat
+          docker rm chat
+          docker run -d -p 80:3000 --name chat docker.pkg.github.com/jkamsker/nodejs-test-server/chat
